<resources>
    <string name="app_name">Student Registration</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="registration">Registration</string>
    <string name="year">Year</string>
    <string name="department">Department</string>
    <string name="next">Next</string>
    <string name="background_image">background_image</string>
    <string name="logo">logo</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="guardian_phone">Guardian Phone</string>
    <string name="personal_phone">Personal Phone</string>
    <string name="current_address">Current Address</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="profile_image">profile image</string>
    <string name="menu">Menu</string>
    <string name="subject_list">Subject List</string>
    <string name="exam_location">Exam Location</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="subjects">Subjects</string>
    <string name="exam">Exam</string>
    <string name="location">Location</string>
    <string name="track">Track</string>
    <string name="exam_details">Exam Details</string>
</resources>